# coding_quix_app

./: .gitignore  Cargo.toml
src/: config.rs  db.rs  main.rs  utils.rs
src/middleware/: auth.rs
src/models/: category.rs  leaderboard.rs  mod.rs  question.rs  quiz.rs  user.rs
src/routes/: admin.rs  auth.rs  mod.rs  quiz.rs  user.rs
src/services/: leaderboard_service.rs  mod.rs  phone_verify.rs  question_service.rs  quiz_service.rs  s3_service.rs  user_service.rs
src/tests/: admin_tests.rs  auth_tests.rs  common.rs  mod.rs  quiz_tests.rs
