[package]
name = "coding_quix_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "multipart"] }
axum-core = "0.5.2" # Pin to match axum 0.8.4
tokio = { version = "1.47.1", features = ["full"] }
mongodb = { version = "3.3.0"  }
# bson = { version = "3.0.0", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "fs"] }
dotenv = "0.15.0"
serde = { version = "1.0.221", features = ["derive"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.16"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = "0.9.2"
headers = "0.4.1"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "trust-dns"] }
serde_json = "1.0.145"
phonenumber = "0.3.7"
base64 = "0.22.1"
tower = "0.5.2"
shuttle-runtime = "0.57.0"
shuttle-aws-rds = { version = "0.57.0" }
aws-sdk-s3 = "1.51.0"
mime = "0.3.17"
mime_guess = "2.0.5"
shuttle-axum = "0.57.0"
aws-config = "1.8.6"
aws-credential-types = "1.2.6"
